# alon_newcatch

./: AWS_SETUP_GUIDE.md  greeting.py  index.html  main.py  mainmcp1.py  pyproject.toml  script.js  styles.css  test_s3.py  transcription.py  voice_recorder_s3.html
