[project]
name = "mcp-server-template"
version = "0.1.0"
description = "Python MCP Server template"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Alpic" }]
keywords = ["mcp", "llm", "alpic", "python"]
dependencies = [
    "black>=25.1.0",
    "mcp",
    "boto3>=1.28.0",
    "requests>=2.31.0",
    "mistralai>=0.4.0",
]
